[project]
name = "coding-test"
version = "0.1.0"
description = ""
authors = [
    {name = "vkqxkr",email = "vkqxkr@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0, >=3.11"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
